# otoconf

./: README.md  nginx.conf  pyproject.toml  requirements.txt
example/: nginx.conf
example/mail/: .conf  main.py
example/product/: .conf
example/sms/: .conf  main.py
example/user/: .conf
otoconf/: __main__.py  resolvers.py
