[tool.poetry]
name = "otoconf"
version = "0.0.1"
description = "oto generate configuration for proxy tools."
readme = "README.md"
homepage = "https://github.com/BilalAlpaslan/otoconf"
authors = ["Bilal Alpaslan <m.bilal.alpaslan@gmail.com>"]
license = "LICENSE"
packages = [{include = "otoconf/*"}]

[tool.poetry.dependencies]
python = ">=3.7"
typer = ">=0.3.0"
nginxfmt = ">=0.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"